# book-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py
app/api/routes/: recommend.py  uploads.py
app/db/: init_db.py  schema.sql  seed.sql  session.py
app/repositories/: book_repository.py  embedding_repository.py  ingestion_log_repository.py  metrics_repository.py  review_repository.py  upload_repository.py
app/services/: embedding_pipeline.py  embedding_provider.py  embedding_service.py  ingestion_service.py  normalization.py  upload_service.py
app/utils/: retry.py
app/worker/: celery_app.py  tasks.py
